# MedicalCost-RegressionAndClassification

./: .gitignore  README.md  pipeline_registry.py  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
data/08_reporting/: classification_summary.txt  model_evaluation_output.txt  univariate_regression_output.txt
data/08_reporting/classification/: report_log_reg.txt  report_rf.txt  report_svc.txt  report_xgb.txt  summary.txt
data/08_reporting/regression/: evaluation_output_lr.txt  evaluation_output_rf.txt  evaluation_output_xgb.txt  model_evaluation_output.txt  univariate_regression_output.txt
notebooks/: classification.ipynb  regression.ipynb
src/medicalcost/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/medicalcost/pipelines/data_engineering/: __init__.py  nodes.py  pipeline.py
src/medicalcost/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/medicalcost/pipelines/exploratory_data/: nodes.py  pipeline.py
src/medicalcost/pipelines/feature_engineering/: nodes.py  pipeline.py
src/medicalcost/pipelines/model_classification/: __init__.py  nodes.py  pipeline.py
src/medicalcost/pipelines/model_regression/: __init__.py  nodes.py  pipeline.py
