[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "medicalcost"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
medicalcost = "medicalcost.__main__:main"

[tool.kedro]
package_name = "medicalcost"
project_name = "MedicalCost"
kedro_init_version = "1.0.0"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "medicalcost.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
